# patisson-api

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.sh.dist
.docker/: migrate.sh
.github/workflows/: main.yml
.postgres/: init.sql
crates/analytics/: Cargo.toml
crates/analytics/benches/: calc.rs
crates/analytics/src/: lib.rs
crates/bybit-sdk/: Cargo.toml
crates/bybit-sdk/examples/: Cargo.toml  README.md  rest.rs  stream.rs
crates/bybit-sdk/src/: README.md  api.rs  client.rs  common.rs  enums.rs  incoming_message.rs  lib.rs  outgoing_message.rs  stream.rs  topic.rs  url.rs
microservices/auth/: Cargo.toml
microservices/auth/.sqlx/: query-297afbcfea785617057d51b3c3c64b44a5c25641a403ded4ff90f92efba432ab.json  query-5c88d6570f179456b2e5026acf6bbfacbfad11a08ece31c628e814828bfdcefb.json
microservices/auth/migrations/: 20241213230927_create-table-users.down.sql  20241213230927_create-table-users.up.sql
microservices/auth/sql/: create-user.sql  get-user-by-id.sql  get-user-list.sql
microservices/auth/src/: api.rs  cli.rs  config.rs  handler.rs  main.rs  router.rs
microservices/provider/: Cargo.toml  README.md
microservices/provider/src/: main.rs
microservices/provider/src/application/: app.rs  application.rs  def.rs  definition.rs  mod.rs
microservices/provider/src/infrastructure/adapters/: mod.rs
microservices/provider/src/infrastructure/adapters/binance/: mod.rs
microservices/provider/src/infrastructure/adapters/bingx/: mod.rs
microservices/provider/src/infrastructure/adapters/bybit/: map.rs  mod.rs
microservices/provider/src/infrastructure/adapters/kraken/: mod.rs
microservices/provider/src/infrastructure/adapters/mexc/: mod.rs
microservices/provider/src/presentation/: api.rs  cli.rs  map.rs
microservices/provider/src/presentation/http/: handler.rs
services/auth/: Cargo.toml
services/auth/.sqlx/: query-48c97c5719b5b2f35fe303b7965d8bc8c9b80d8eb26ce03a8d622db5cfbb0c3b.json  query-8a7c0a04880648295dbba7827123d590a049ac14be8e4e794b867ce02dc28595.json
services/auth/sql/: get-user-by-username.sql
services/auth/src/: api.rs  cli.rs  handler.rs  main.rs  router.rs
services/provider/: Cargo.toml
services/provider/src/: main.rs
services/provider/src/application/: app.rs  def.rs  mod.rs
services/provider/src/infrastructure/: mod.rs
services/provider/src/infrastructure/adapters/: mod.rs
services/provider/src/infrastructure/adapters/binance/: mod.rs
services/provider/src/infrastructure/adapters/bingx/: mod.rs
services/provider/src/infrastructure/adapters/bybit/: map.rs  mod.rs
services/provider/src/infrastructure/adapters/kraken/: mod.rs
services/provider/src/infrastructure/adapters/mexc/: mod.rs
services/provider/src/presentation/: api.rs  cli.rs  config.rs  map.rs  mod.rs
services/provider/src/presentation/http/: handler.rs
services/provider/src/presentation/ws/: api.rs  mod.rs
