[workspace]
resolver = "2"
members = ["crates/*", "services/*"]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Yurii Musolov <yurii.musolov@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive", "env"] }
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde-aux = "4.6.0"
serde_json = "1.0.139"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio",
  "runtime-tokio-rustls",
  "time",
  "uuid",
] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tower-http = { version = "0.6.1", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
