[package]
name = "bybit-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde-aux.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true

[dev-dependencies]
