[package]
name = "provider"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
bybit-sdk = { path = "../../crates/bybit-sdk" }
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
