[package]
name = "provider"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum-extra.workspace = true
axum.workspace = true
bybit-sdk = { path = "../../crates/bybit-sdk" }
clap.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
